[tool.poetry]
name = "games-recommendation"
version = "0.1.0"
description = ""
authors = ["Grainier Perera <grainier.perera@macrometa.com>"]
readme = "README.md"
packages = [{include = "games_recommendation"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

